# nobit-diarium

./: .gitignore  Makefile  README.md  nobit.cabal
.github/workflows/: haskell.yml  paper.yml.txt  vlang.yml
app/: Main.hs
assets/: main.js  style.css
corpus/: 2025.08.19.0301.md  2025.08.26.md  2025.08.28.md  2025.08.29.md  2025.09.09.md  README.md
data/: entry.sql  journal.sql  test.sqlite-journal
paper/: README.md  paper.txt  referencias.md  resumen.md
src/: Lib.hs  Nobit.hs  data.v  entry.v  journal.v  main.v  main_test.v  row.v
src/Nobit/: Account.hs  Element.hs  Entry.hs  Journal.hs  Ledger.hs  Nature.hs
src/templates/: index.html
test/: Main.hs  Test.hs
