cabal-version: 3.0
name: nobit
version: 0.1

library
  exposed-modules: Nobit
  other-modules: 
    Nobit.Nature 
    Nobit.Element
    Nobit.Account
    Nobit.Entry
    Nobit.Journal
    Nobit.Ledger
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base

executable nobit-app
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
    base,
    nobit,

--$> cabal configure --enable-tests
test-suite nobit-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends:
    base,
    nobit,
    tasty,
    tasty-hunit,
