cabal-version: 3.0
name: nobit
version: 0.1

library
  exposed-modules: Nobit
  other-modules:
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base,
    sqlite-simple,

executable nobit-app
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
    base,
    nobit,
    sqlite-simple,

--$> cabal configure --enable-tests
test-suite nobit-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  default-language: Haskell2010
  build-depends:
    base,
    nobit,
    sqlite-simple,
    tasty,
    tasty-hunit,
